src/objects/Virtual_Card__c.object
<CustomObject>
    <fields>
        <fullName>Card_Reference__c</fullName>
        <label>Card Reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Funding_Account_Reference__c</fullName>
        <label>Funding Account Reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loan_Account__c</fullName>
        <label>CL Contract</label>
        <referenceTo>loan__Loan_Account__c</referenceTo>
        <relationshipLabel>Virtual Cards</relationshipLabel>
        <relationshipName>Virtual_Cards</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Loan_Disbursal_Transaction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Loan Disbursal Transaction</label>
        <referenceTo>loan__Loan_Disbursal_Transaction__c</referenceTo>
        <relationshipLabel>Virtual Cards</relationshipLabel>
        <relationshipName>Virtual_Cards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Partner</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Virtual Cards</relationshipLabel>
        <relationshipName>Virtual_Cards</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Virtual Card</label>
    <nameField>
        <label>Virtual Card Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Virtual Cards</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>